Fri Apr 18 17:02:56 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/,common/,docs/overview.html,docs/quickstart.html,
	  docs/quickstartexpand.cc.html,extra/,include/om/,matcher/,net/,
	  tests/,testsuite/: Use std::string instead of typedef-ing it as
	  om_termname.  The typedef doesn't really buy us anything.  Keep
	  a typedef for compatibility with existing code for now.
	* api/omstem.cc,include/om/omstem.h: Reworked OmStem to use
	  reference counted internals, and renamed to Xapian::Stem with
	  a #define for compatibility with existing code.

Fri Apr 18 16:12:32 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS: GCC 3.2.2 on Redhat 7.1 works with CXXFLAGS=-Werror

Thu Apr 10 20:05:27 BST 2003  Olly Betts <olly@survex.com>

	* common/Makefile.am,common/indexer.h,testsuite/Makefile.am,
	  testsuite/indexer.h: Moved indexer.h from common to testsuite
	  and altered it to use iosfwd instead of iostream and to
	  declare OmDocument as a class instead of include omdocument.h.

Thu Apr 10 18:55:55 BST 2003  Olly Betts <olly@survex.com>

	* xapian-config.nodep.in: Removed --prefix and --exec-prefix - you
	  can't reliably install Xapian with a different prefix to the one
	  it was configured with, yet these options give the impression you
	  can.

Thu Apr 10 18:53:53 BST 2003  Olly Betts <olly@survex.com>

	* .cvsignore: Added config.sub.

Thu Apr 10 02:41:50 BST 2003  Olly Betts <olly@survex.com>

	* NEWS,configure.in: Updated for 0.6.5 release.

Thu Apr 10 02:29:12 BST 2003  Olly Betts <olly@survex.com>

	* docs/doxygen_api_footer.html_tmpl,docs/doxygen_full_footer.html_tmpl,
	  docs/overview.html: Use http://www.doxygen.org/ as URL for doxygen.
	* docs/overview.html: Fixed bad link to our own website!

Thu Apr 10 02:12:00 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am,backends/Makefile.am,backends/net/.cvsignore,
	  backends/net/Makefile.am,netprogs/.cvsignore: Renamed libnetdb.la
	  to libremote.la, and LIB_REMOTE1 to LIBNET_LA.
