@@ -1,0 +1,4 @@
+.*.swp
+Makefile.in
+Makefile
+.deps
