@@ -1,0 +1,7 @@
+## Process this file with automake to produce Makefile.in
+
+libxapianincludedir = $(includedir)/xapian
+libxapianinclude_HEADERS = base.h stem.h
+#nodist_libxapianinclude_HEADERS = om.h
+#EXTRA_DIST = om.h.in
+#DISTCLEANFILES = om.h
