@@ -1,3 +1,12 @@
+Fri Apr 18 17:57:21 BST 2003  Olly Betts <olly@survex.com>
+
+	* configure.in,api/omstem.cc,include/Makefile.am,include/om/om.h.in,
+	  include/om/omstem.h,include/xapian/.cvsignore,
+	  include/xapian/Makefile.am,include/xapian/base.h,
+	  include/xapian/stem.h: Reworked OmStem to use reference counted
+	  internals; renamed OmStem to Xapian::Stem and added a #define for
+	  compatibility with existing code.
+
 Fri Apr 18 17:02:56 BST 2003  Olly Betts <olly@survex.com>
 
 	* api/,backends/,common/,docs/overview.html,docs/quickstart.html,
@@ -5,9 +14,6 @@ Fri Apr 18 17:02:56 BST 2003  Olly Betts <olly@survex.com>
 	  tests/,testsuite/: Use std::string instead of typedef-ing it as
 	  om_termname.  The typedef doesn't really buy us anything.  Keep
 	  a typedef for compatibility with existing code for now.
-	* api/omstem.cc,include/om/omstem.h: Reworked OmStem to use
-	  reference counted internals, and renamed to Xapian::Stem with
-	  a #define for compatibility with existing code.
 
 Fri Apr 18 16:12:32 BST 2003  Olly Betts <olly@survex.com>
 
@@ -5036,6 +5042,7 @@ Fri Nov 24 18:27:06 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 Fri Nov 24 15:34:17 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Declare this to be version 0.4.1
+
 
 
 
